# precommit-forbidden-strings

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  forbidden-words.txt  pyproject.toml
forbidden/: forbidden.py  launcher.py
script/: demo
